# allooptim-core

./: .buildinfo  .gitignore  .readthedocs.yaml  CHANGELOG.md  JACOBIAN_IMPLEMENTATION_STATUS.md  README.md  REFACTORING_ANALYSIS.md  REFACTORING_PLAN.md  RELEASE_CHECKLIST.md  analyze_allocations.py  architecture.html  check_db.py  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  quantstats.html  quickstart.html  search.html  searchindex.js  test_risk_parity.py
.github/: RELEASE.md
.github/workflows/: ci.yml  docs.yml  publish.yml
_modules/: index.html
_sources/: index.rst.txt  quickstart.rst.txt
allo_optim/: __init__.py
allo_optim/allocation_to_allocators/: __init__.py  a2a_config.py  a2a_orchestrator.py  a2a_result.py  allocation_optimizer.py  allocation_orchestrator.py  allocation_orechtrator.py  data_provider_factory.py  equal_weight_orchestrator.py  error_estimator.py  observation_simulator.py  optimized_orchestrator.py  optimizer_convergence.py  optimizer_simulator.py  orchestrator_adapter.py  orchestrator_factory.py  simulator_interface.py  wikipedia_pipeline_orchestrator.py
allo_optim/backtest/: backtest_config.py  backtest_config.yaml  backtest_engine.py  backtest_report.py  backtest_visualizer.py  cluster_analyzer.py  data_cleaning.py  data_loader.py  performance_metrics.py
allo_optim/config/: allocation_dataclasses.py  default_pydantic_config.py  stock_dataclasses.py  stock_universe.py
allo_optim/covariance_transformer/: covariance_autoencoder.py  covariance_transformer.py  transformer_interface.py  transformer_list.py
allo_optim/data_generation/: demo_synthetic_autoencoder.py  diverse_covariance_generator.py  diverse_training_data.py  generate_30k_dataset.py  generate_5k_dataset.py  lower_triangle_utils.py  training_data.py
allo_optim/entry/: comprehensive_backtest.py  run_single_allocator.py
allo_optim/optimizer/: allocation_metric.py  asset_name_utils.py  base_ml_optimizer.py  ensemble_optimizers.py  optimizer_interface.py  optimizer_list.py
allo_optim/simulator/: observation_simulator.py  optimizer_convergence.py  optimizer_simulation.py  simulator_interface.py
allooptim/: __init__.py
allooptim/allocation_to_allocators/: __init__.py  a2a_config.py  a2a_manager.py  a2a_manager_config.py  a2a_orchestrator.py  a2a_result.py  allocation_constraints.py  allocation_optimizer.py  data_provider_factory.py  equal_weight_orchestrator.py  error_estimator.py  observation_simulator.py  optimized_orchestrator.py  optimizer_convergence.py  optimizer_simulator.py  orchestrator_factory.py  post_processing_constraints.py  rebalancer.py  simulator_interface.py  wikipedia_pipeline_orchestrator.py
allooptim/backtest/: __init__.py  backtest_config.py  backtest_engine.py  backtest_quantstats.py  backtest_report.py  backtest_visualizer.py  cluster_analyzer.py  data_cleaning.py  data_loader.py  performance_metrics.py
allooptim/config/: __init__.py  a2a_config.py  a2a_manager_config.py  allocation_dataclasses.py  backtest_config.py  cash_config.py  failure_diagnostics.py  failure_handling_config.py  optimizer_config.py  postprocessing_config.py  rebalancer_config.py  stock_dataclasses.py  stock_universe.py
allooptim/covariance_transformer/: __init__.py  covariance_autoencoder.py  covariance_transformer.py  transformer_interface.py  transformer_list.py
allooptim/data/: fundamental_data.py  fundamental_providers.py  price_data_provider.py  provider_factory.py
allooptim/data_generation/: __init__.py  diverse_covariance_generator.py  diverse_training_data.py  generate_30k_dataset.py  generate_5k_dataset.py  lower_triangle_utils.py  training_data.py
allooptim/optimizer/: __init__.py  (+11 more)
api/: optimizers.html
docs/: api.md  backtesting.md  examples.md  migration.md  optimizers.md
examples/: allocate_wikipedia.py  comprehensive_backtest.ipynb  comprehensive_backtest.py  data_generation_examples.py  notebook_utils.py  run_orchestrator_examples.py  run_single_allocator.py  simple_backtest.ipynb  single_a2a_example.ipynb  single_optimizer_example.ipynb
optimizers/: comparison.html
scripts/: check_docs_coverage.py
tests/: conftest.py  test_a2a.py  test_allocation_constraints.py  test_allocation_optimizers.py  test_backtest_quantstats.py  test_cash_config.py  test_cma_optimizer.py  test_comprehensive_backtest.py  test_config_instantiation.py  test_covariance_transformer.py  test_failure_handling.py  test_fundamental_integration.py  test_jacobian_performance.py  test_jacobian_validation.py  test_ml_optimizers.py  test_notebooks.py  test_optimizer.py  test_optimizer_config.py  test_optimizer_config_interface.py  test_orchestrator_adapter.py  test_orchestrator_backtest.py  test_provider_factory.py  test_rebalancer.py  test_stock_universe.py
(+105 files in other folders)
