[tool.poetry]
name = "allo_optim"
version = "0.3.0"
description = "Scientific portfolio optimization for institutional investors "
authors = ["Jonas ten Haaf <jonas.tenhaaf@mail.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.0"
pandas = "^2.3.3"
numpy = "^2.3.4"
pyyaml = "^6.0.3"
pydantic = "^2.12.3"
scipy = "^1.16.1"
lmo = "^0.14.2"
pageviewapi = "^0.4.0"
tinygrad = "^0.11.0"
pyswarms = "^1.3.0"
skfolio = "^0.13.0"
pyportfolioopt = "^1.5.6"
scikit-learn = "^1.7.2"
python-dotenv = "^1.1.1"
requests = "^2.32.5"
yfinance = "^0.2.66"
lightgbm = "^4.6.0"
cma = "^4.4.0"
h5py = "^3.15.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
coverage = "^7.6.0"
pytest = "^8.3.2"
ruff = "^0.5.2"
poetry-plugin-export = "^1.6.0"
pytest-cov = "^7.0.0"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I", "PL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
